--- a/tests/azurermconfig.json.tmpl
+++ b/tests/azurermconfig.json.tmpl
@@ -4,5 +4,7 @@
    "appSecret": "<your app secret>",
    "subscriptionId": "<your subscription id>",
    "resourceGroup": "<your resource group>",
-   "vmssName": "<your VM Scale Set name>"
+   "vmssName": "<your VM Scale Set name>",
+   "region": "<your selected region>",
+   "stoaccountName": "<your ams storage account name>" 
 }
