Simplify config files

--- a/examples/azurermconfig.json.tmpl
+++ b/examples/azurermconfig.json.tmpl
@@ -3,8 +3,5 @@
    "appId": "<your app id>",
    "appSecret": "<your app secret>",
    "subscriptionId": "<your subscription id>",
-   "resourceGroup": "<your resource group>",
-   "vmssName": "<your VM Scale Set name>",
-   "region": "<your selected region>",
-   "stoaccountName": "<your ams storage account name>" 
+   "region": "<your selected region>"
 }
