--- a/test/azurermconfig.json.tmpl
+++ b/test/azurermconfig.json.tmpl
@@ -3,7 +3,5 @@
    "appId": "<your app id>",
    "appSecret": "<your app secret>",
    "subscriptionId": "<your subscription id>",
-   "resourceGroup": "<your resource group>",
-   "vmssName": "<your VM Scale Set name>",
-   "location": "<your selected region>",
+   "location": "<your selected region>"
 }
