service principal added for acs provisioning k8s

--- a/examples/azurermconfig.json.tmpl
+++ b/examples/azurermconfig.json.tmpl
@@ -3,5 +3,7 @@
    "appId": "<your app id>",
    "appSecret": "<your app secret>",
    "subscriptionId": "<your subscription id>",
-   "region": "<your selected region>"
+   "region": "<your selected region>",
+   "servicePrincipalClientID": "<your azure app ID>,
+   "servicePrincipalClientSecret": "<your azure client secret>"
 }
