Fixing the examples to reflect the new module name...

--- a/examples/media_services/config.json.tmpl
+++ b/examples/media_services/config.json.tmpl
@@ -5,5 +5,5 @@
    "sto_accountKey": "<your-storage-account-key>",
    "logName": "<log-name>",
    "logLevel": "<log-level>",
-   "purgeLog": "Yes",
+   "purgeLog": "Yes"
 }
